--- a/back-end/package.json
+++ b/back-end/package.json
@@ -15,6 +15,7 @@
     "jsonwebtoken": "^8.5.1",
     "mysql": "^2.18.1",
     "nodemon": "^2.0.15",
+    "password-validator": "^5.2.1",
     "validator": "^13.7.0"
   }
 }
