--- a/back-end/package.json
+++ b/back-end/package.json
@@ -12,7 +12,9 @@
     "bcrypt": "^5.0.1",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
+    "helmet": "^4.6.0",
     "jsonwebtoken": "^8.5.1",
+    "multer": "^1.4.4",
     "mysql": "^2.18.1",
     "nodemon": "^2.0.15",
     "password-validator": "^5.2.1",
